--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -215,5 +215,8 @@
     <ClInclude Include="PlugIoConnectorAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NNetCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
