--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -609,6 +609,7 @@
     <ClInclude Include="MakeConnAnimation.h" />
     <ClInclude Include="Measurement.h" />
     <ClInclude Include="IoNeuronsAnimation.h" />
+    <ClInclude Include="NNetCommand.h" />
     <ClInclude Include="PlugIoConnectors.h" />
     <ClInclude Include="PlugIoNeurons.h" />
     <ClInclude Include="SingleNobAnimation.h" />
