--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="win32_actionTimer.h" />
     <ClInclude Include="win32_animation.h" />
     <ClInclude Include="win32_animationCmd.h" />
+    <ClInclude Include="win32_animationSequence.h" />
     <ClInclude Include="win32_baseDialog.h" />
     <ClInclude Include="win32_baseRefreshRate.h" />
     <ClInclude Include="win32_baseWindow.h" />
@@ -201,6 +202,7 @@
     </ClCompile>
     <ClCompile Include="win32_aboutBox.cpp" />
     <ClCompile Include="win32_animationCmd.cpp" />
+    <ClCompile Include="win32_animationSequence.cpp" />
     <ClCompile Include="win32_baseDialog.cpp" />
     <ClCompile Include="win32_baseRefreshRate.cpp" />
     <ClCompile Include="win32_baseWindow.cpp" />
