--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -575,15 +575,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ComputeThread.cpp" />
-    <ClCompile Include="ConnAnimationCommand.cpp" />
     <ClCompile Include="D2D_DrawContext.cpp" />
     <ClCompile Include="Measurement.cpp" />
-    <ClCompile Include="NNetWinWrappers.cpp" />
+    <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
-    <ClCompile Include="win32_Commands.cpp" />
     <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_descriptionWindow.cpp" />
     <ClCompile Include="win32_MainWindow.cpp" />
@@ -600,20 +598,11 @@
     <ClCompile Include="win32_triggerSoundDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ArrowAnimation.h" />
     <ClInclude Include="ComputeThread.h" />
-    <ClInclude Include="ConnAnimationCommand.h" />
-    <ClInclude Include="CoordAnimation.h" />
     <ClInclude Include="D2D_DrawContext.h" />
-    <ClInclude Include="MakeConnAnimation.h" />
     <ClInclude Include="Measurement.h" />
-    <ClInclude Include="IoNeuronsAnimation.h" />
-    <ClInclude Include="PlugIoConnectors.h" />
-    <ClInclude Include="PlugIoNeurons.h" />
+    <ClInclude Include="NNetWrappers.h" />
     <ClInclude Include="SingleNobAnimation.h" />
-    <ClInclude Include="NNetWinWrappers.h" />
-    <ClInclude Include="PlugIoConnectorAnimation.h" />
-    <ClInclude Include="PlugIoNeuronAnimation.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="scale.h" />
@@ -623,7 +612,6 @@
     <ClInclude Include="TimeDisplay.h" />
     <ClInclude Include="UndoRedoMenu.h" />
     <ClInclude Include="win32_appTitle.h" />
-    <ClInclude Include="win32_Commands.h" />
     <ClInclude Include="win32_crsrWindow.h" />
     <ClInclude Include="win32_importTermination.h" />
     <ClInclude Include="win32_MainWindow.h" />
