--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -111,7 +111,7 @@
     <ClInclude Include="win32_animation.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="win32_animationCmd.h">
+    <ClInclude Include="win32_command.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
@@ -173,7 +173,7 @@
     <ClCompile Include="win32_escape.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_animationCmd.cpp">
+    <ClCompile Include="win32_command.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
