work on scripting

--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -92,17 +92,18 @@ FONT 8, "Ms Shell Dlg"
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDC_NNET_SIMU_MAIN ACCELERATORS
 {
-    "z",            IDM_UNDO,           VIRTKEY, CONTROL
-    "y",            IDM_REDO,           VIRTKEY, CONTROL
-    "a",            IDM_SELECT_ALL,     VIRTKEY, CONTROL
-    "s",            IDM_SAVE_MODEL,     VIRTKEY, CONTROL
-    "c",            IDM_COPY_SELECTION, VIRTKEY, CONTROL
-    "c",            IDM_CRSR_WINDOW,    ASCII,   ALT
-    "d",            IDM_DESC_WINDOW,    ASCII,   ALT
-    "p",            IDM_PARAM_WINDOW,   ASCII,   ALT
-    "m",            IDM_MINI_WINDOW,    ASCII,   ALT
-    "?",            IDM_ABOUT,          ASCII,   ALT
-    VK_BACK,        IDM_UNDO,           VIRTKEY, ALT
-    VK_DELETE,      IDM_DELETE,         VIRTKEY
-    VK_ESCAPE,      IDM_ESCAPE,         VIRTKEY
+    "z",       IDM_UNDO,            VIRTKEY, CONTROL
+    "y",       IDM_REDO,            VIRTKEY, CONTROL
+    "a",       IDM_SELECT_ALL,      VIRTKEY, CONTROL
+    "s",       IDM_SAVE_MODEL,      VIRTKEY, CONTROL
+    "c",       IDM_COPY_SELECTION,  VIRTKEY, CONTROL
+    "c",       IDM_CRSR_WINDOW,     ASCII,   ALT
+    "d",       IDM_DESC_WINDOW,     ASCII,   ALT
+    "p",       IDM_PARAM_WINDOW,    ASCII,   ALT
+    "m",       IDM_MINI_WINDOW,     ASCII,   ALT
+    "?",       IDM_ABOUT,           ASCII,   ALT
+    " ",       IDM_NEXT_SCRIPT_CMD, ASCII
+    VK_BACK,   IDM_UNDO,            VIRTKEY, ALT
+    VK_DELETE, IDM_DELETE,          VIRTKEY
+    VK_ESCAPE, IDM_ESCAPE,          VIRTKEY
 }
