--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="ScriptStack.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="ScriptFunctor.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
