--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,7 +1,7 @@
 MoveWindow IDM_APPL_WINDOW -1928 1072 1936 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DESC_WINDOW -652 1839 373 289
-ShowWindow IDM_DESC_WINDOW SW_HIDE
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -292 1372 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -292 1108 299 271
