--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -8,8 +8,8 @@ MoveWindow IDM_MINI_WINDOW -292 1108 299 271
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1920 974
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1568 1785 1338 288
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -1697 1301 1338 288
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -289 1567 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -290 1845 301 281
