--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -1,5 +1,5 @@
 MoveWindow IDM_APPL_WINDOW -1928 1072 1936 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DESC_WINDOW -652 1839 373 289
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -292 1372 301 201
@@ -8,7 +8,7 @@ MoveWindow IDM_MINI_WINDOW -292 1108 299 271
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1920 974
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1697 1301 1338 288
+MoveWindow IDM_MONITOR_WINDOW -1476 1480 1338 288
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -289 1567 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
