--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -220,6 +220,7 @@
     <ClInclude Include="Segment.h" />
     <ClInclude Include="Nob.h" />
     <ClInclude Include="NobId.h" />
+    <ClInclude Include="SignalGenerator.h" />
     <ClInclude Include="SignalId.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -263,6 +264,7 @@
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="ParameterType.cpp" />
     <ClCompile Include="NobType.cpp" />
+    <ClCompile Include="SignalGenerator.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="UPNobList.cpp" />
   </ItemGroup>
