--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="EllipseType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PixCoordFp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp">
