--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="ScriptFunctor.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="WrapBase.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
