--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SYMTAB.H" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WrapBase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ERRHNDL.cpp" />
