--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -580,7 +580,7 @@
     <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="Preferences.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
-    <ClCompile Include="StimulusDesigner.cpp" />
+    <ClCompile Include="SignalDesigner.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_descriptionWindow.cpp" />
@@ -607,7 +607,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SlowMotionDisplay.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="StimulusDesigner.h" />
+    <ClInclude Include="SignalDesigner.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeDisplay.h" />
     <ClInclude Include="UndoRedoMenu.h" />
