--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="SignalGenerator.h" />
     <ClInclude Include="SignalId.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Synapse.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
     <ClInclude Include="ParameterType.h" />
@@ -265,6 +266,7 @@
     <ClCompile Include="ParameterType.cpp" />
     <ClCompile Include="NobType.cpp" />
     <ClCompile Include="SignalGenerator.cpp" />
+    <ClCompile Include="Synapse.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="UPNobList.cpp" />
   </ItemGroup>
