--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="SetParameterCommand.h" />
     <ClInclude Include="SetTriggerSoundCommand.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="ToggleEmphModeCmd.h" />
     <ClInclude Include="ToggleStopOnTriggerCommand.h" />
   </ItemGroup>
   <ItemGroup>
