--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="NobId.h" />
     <ClInclude Include="SignalGenerator.h" />
     <ClInclude Include="SignalId.h" />
+    <ClInclude Include="SignalSource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tHighlightType.h" />
