--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClInclude Include="observerInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PixelCoordsFp.h">
+    <ClInclude Include="Uniform2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PixelTypes.h">
