naming cleaned up. running.

--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -111,7 +111,7 @@
     <ClInclude Include="EllipseType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PixCoordFp.h">
+    <ClInclude Include="PixFpDimension.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
