--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -35,7 +35,7 @@
     <ClInclude Include="NamedType.h" />
     <ClInclude Include="observable.h" />
     <ClInclude Include="observerInterface.h" />
-    <ClInclude Include="PixCoordFp.h" />
+    <ClInclude Include="PixFpDimension.h" />
     <ClInclude Include="Uniform2D.h" />
     <ClInclude Include="PixelTypes.h" />
     <ClInclude Include="PointType.h" />
